--- a/GP.Focusi.Repository/GP.Focusi.Repository.csproj
+++ b/GP.Focusi.Repository/GP.Focusi.Repository.csproj
@@ -10,4 +10,17 @@
     <ProjectReference Include="..\GD.Core\GP.Focusi.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Contexts\" />
+    <Folder Include="Data\Configurations\" />
+    <Folder Include="Data\DataSeed\" />
+    <Folder Include="Identity\Configurations\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.14" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.14" />
+  </ItemGroup>
+
 </Project>
