--- a/GP.Focusi.Services/GP.Focusi.Services.csproj
+++ b/GP.Focusi.Services/GP.Focusi.Services.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
+    <PackageReference Include="SendGrid" Version="9.29.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\GP.Focusi.Repository\GP.Focusi.Repository.csproj" />
   </ItemGroup>
 
