--- a/GD.Core/GP.Focusi.Core.csproj
+++ b/GD.Core/GP.Focusi.Core.csproj
@@ -11,9 +11,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Castle.Core" Version="5.2.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.3" />
+    <PackageReference Include="MailKit" Version="4.11.0" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="9.0.3" />
+    <PackageReference Include="MimeKit" Version="4.11.0" />
+    <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
+    <PackageReference Include="sib_api_v3_sdk" Version="3.3.0" />
   </ItemGroup>
 
 </Project>
