--- a/GP.Focusi.Services/GP.Focusi.Services.csproj
+++ b/GP.Focusi.Services/GP.Focusi.Services.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
-    <PackageReference Include="SendGrid" Version="9.29.3" />
+    <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
