--- a/GP.Focusi.Repository/GP.Focusi.Repository.csproj
+++ b/GP.Focusi.Repository/GP.Focusi.Repository.csproj
@@ -11,15 +11,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\Contexts\" />
     <Folder Include="Data\Configurations\" />
     <Folder Include="Data\DataSeed\" />
-    <Folder Include="Identity\Configurations\" />
-    <Folder Include="Repositories\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.14" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.14" />
   </ItemGroup>
 
