--- a/Graduation.Project.API/GP.Focusi.API.csproj
+++ b/Graduation.Project.API/GP.Focusi.API.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="ProfilePictures\DefaultUser.JPG" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.14">
       <PrivateAssets>all</PrivateAssets>
@@ -21,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\ProfilePictures\" />
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
