--- a/Graduation.Project.API/GP.Focusi.API.csproj
+++ b/Graduation.Project.API/GP.Focusi.API.csproj
@@ -7,10 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="ProfilePictures\DefaultUser.JPG" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.14">
       <PrivateAssets>all</PrivateAssets>
@@ -25,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <None Include="wwwroot\ProfilePictures\DefaultUser.JPG" />
   </ItemGroup>
 
 </Project>
