--- a/GP.Focusi.Services/GP.Focusi.Services.csproj
+++ b/GP.Focusi.Services/GP.Focusi.Services.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\GP.Focusi.Repository\GP.Focusi.Repository.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+
 </Project>
