--- a/Graduation.Project.API/GP.Focusi.API.csproj
+++ b/Graduation.Project.API/GP.Focusi.API.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\Class Videos\VideoQuestions.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.14">
       <PrivateAssets>all</PrivateAssets>
@@ -21,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\Class Videos\VideoQuestions.json" />
     <None Include="wwwroot\ProfilePictures\DefaultUser.JPG" />
   </ItemGroup>
 
